[package]
name = "ansi-width"
description = "Calculate the width of a string when printed to the terminal"
license = "MIT"
readme = "README.md"
authors = ["uutils developers"]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-width = "0.1.11"
